Tweaks to dev profile JVM opts.